bug fix with tabs overflowing

--- a/src/main/resources/web/assets/styles/app.css
+++ b/src/main/resources/web/assets/styles/app.css
@@ -607,7 +607,7 @@ span.CodeMirror-selectedtext {
 }
 
 .tab.top.border.unselected {
-  height: 100%;
+  height: 22px;
   border-right: 1px solid #858585;
   padding-top: 1px;
   border-Bottom: 1px solid #858585;
